--- a/stylesheet.css
+++ b/stylesheet.css
@@ -88,7 +88,7 @@ body{
 }
 .dropdown option{
     background-color: #ffffff;
-    font-size: 1.2vw
+    /* font-size: 10px */
 }
 
 .search-filed{
@@ -201,19 +201,22 @@ padding-top: 60px;
 
 }
 .slider{
-    position: relative;
-    overflow: hidden;   
-    height: 40vh;
+    height: 20vw;
+   
+    display: flex;
+    overflow: hidden;
 }
-.slider-img{
-    width: 100%;
 
+.slider-img{
+    min-width:100%;
+    height: 100%;
+    object-fit:cover;
+    object-position: top ;
 }
+
 
 /**>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>First cart >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>**/
 .slider-container{
-    position: relative;
-    width: 100%;
     display: flex;
     justify-content: space-evenly;
     gap: 10px;
@@ -265,6 +268,7 @@ font-size: 1vw;
 /* ..................second style dive........................  */
 .container{
 display: flex;
+flex-wrap: wrap;
 gap: 20px;
 width: 100%;
 padding: 0px 20px;
@@ -404,6 +408,7 @@ padding: 0px 20px;
     margin:20px;
     padding-bottom: 20px;
     padding-top: 40px;
+    overflow: hidden;
 }
 
 .product-div{
@@ -600,3 +605,11 @@ border-radius:2px ;
     font-size: 1.1vw;
     text-align: center;
 }
+
+
+
+
+
+
+
+/* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>  Moblie Responsiv layout >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
